--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.4.0",
     "groq": "^3.90.0",
     "next": "15.3.3",
