--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/client": "^7.4.0",
     "groq": "^3.90.0",
     "next": "15.3.3",
+    "next-sanity": "^9.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
