--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.4.0",
+    "@sanity/image-url": "^1.1.0",
     "groq": "^3.90.0",
     "next": "15.3.3",
     "next-sanity": "^9.12.0",
