--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "package.json",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity dev",
-    "start": "sanity start",
-    "build": "sanity build",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
     "deploy": "sanity deploy",
     "deploy-graphql": "sanity graphql deploy"
   },
@@ -16,9 +16,12 @@
   ],
   "dependencies": {
     "@portabletext/react": "^3.2.1",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.90.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.3.3",
+    "next-sanity": "^9.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sanity": "^3.90.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.3",
     "styled-components": "^6.1.15"
